[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-machines"
version = "0.1.0"
description = "Operator-based agent framework for desktop environment interactions."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_machines*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
agentic_machines = [".env_example"]
